--- a/DrinkWater/DrinkWater/LogReg/Login.xaml
+++ b/DrinkWater/DrinkWater/LogReg/Login.xaml
@@ -6,12 +6,21 @@
         xmlns:local="clr-namespace:DrinkWater.LogReg"
         mc:Ignorable="d"
         Title="Login" Height="450" Width="800">
-    <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="21,310,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="679,310,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
-        <CheckBox Content="CheckBox" HorizontalAlignment="Left" Margin="57,202,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Margin="10,69,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Margin="10,35,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+    <Grid Margin="0,10,0,0">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="0*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
+        </Grid.ColumnDefinitions>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="25,46,0,0" Text="Misha" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18"/>
+        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Margin="25,93,0,0" Text="mishapassword" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18"/>
+        <Button x:Name="button1" Content="create new account" HorizontalAlignment="Left" Margin="25,230,0,0" VerticalAlignment="Top" Height="22" Width="140" Click="Button_Click" RenderTransformOrigin="1.509,0.651"/>
+        <Button x:Name="button2" Content="log in" HorizontalAlignment="Left" Margin="224,230,0,0" VerticalAlignment="Top" Height="22" Width="116" RenderTransformOrigin="-2.009,0.513" Click="button2_Click"/>
 
     </Grid>
 </Window>
