--- a/DrinkWater/DrinkWater/LogReg/Registration.xaml
+++ b/DrinkWater/DrinkWater/LogReg/Registration.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="Registration" Height="450" Width="800">
     <Grid>
-        
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="25,46,0,0" Text="Misha" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18"/>
+        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Margin="25,93,0,0" Text="misha@gmail.com" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18"/>
+        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Margin="25,141,0,0" Text="mishapassword" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox  x:Name="textBox4" HorizontalAlignment="Left" Margin="25,194,0,0" Text="mishapassword" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button Content="sign up" HorizontalAlignment="Left" Margin="96,288,0,0" VerticalAlignment="Top" Height="22" Width="140" Click="Button_Click"/>
+
     </Grid>
 </Window>
