--- a/DrinkWater/DrinkWater/ProfileStatistics.xaml
+++ b/DrinkWater/DrinkWater/ProfileStatistics.xaml
@@ -28,9 +28,9 @@
         <Ellipse Name="Avatar" HorizontalAlignment="Left" Height="105" Margin="36,95,0,0" Stroke="Black" VerticalAlignment="Top" Width="105"/>
         <Rectangle Name="Score" HorizontalAlignment="Left" Height="33" Margin="294,369,0,0" Stroke="Black" VerticalAlignment="Top" Width="350"/>
         <ComboBox x:Name="Period" HorizontalAlignment="Left" Height="33" Margin="467,85,0,0" VerticalAlignment="Top" Width="154" SelectionChanged="ComboBox_SelectionChanged" FontFamily="Segoe UI">
-            <ComboBoxItem x:Name="PeriodLable1" HorizontalAlignment="Right"  VerticalAlignment="Top" Width="56" MouseDoubleClick="PeriodLable1_MouseDoubleClick">Per week</ComboBoxItem>
-            <ComboBoxItem x:Name="PeriodLable2" HorizontalAlignment="Right"  VerticalAlignment="Top" Width="56" MouseDoubleClick="PeriodLable1_MouseDoubleClick">Per month</ComboBoxItem>
-            <ComboBoxItem x:Name="PeriodLable3" HorizontalAlignment="Right"  VerticalAlignment="Top" Width="56" MouseDoubleClick="PeriodLable1_MouseDoubleClick">Per year</ComboBoxItem>
+            <ComboBoxItem x:Name="PeriodLable1" HorizontalAlignment="Right"  VerticalAlignment="Top" Width="56" >Per week</ComboBoxItem>
+            <ComboBoxItem x:Name="PeriodLable2" HorizontalAlignment="Right"  VerticalAlignment="Top" Width="56" >Per month</ComboBoxItem>
+            <ComboBoxItem x:Name="PeriodLable3" HorizontalAlignment="Right"  VerticalAlignment="Top" Width="56" >Per year</ComboBoxItem>
         </ComboBox>
         <Label x:Name="PeriodLable" Content="Period" HorizontalAlignment="Left" Height="27" Margin="476,83,0,0" VerticalAlignment="Top" Width="78" RenderTransformOrigin="0.5,0.5">
             <Label.RenderTransform>
@@ -42,5 +42,6 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
+        <Button x:Name="Settings" Content="Settings" HorizontalAlignment="Left" Margin="724,25,0,0" VerticalAlignment="Top" Height="36" Click="Settings_Click"/>
     </Grid>
 </Window>
