--- a/DrinkWater/DrinkWater/Settings.xaml
+++ b/DrinkWater/DrinkWater/Settings.xaml
@@ -7,36 +7,54 @@
         mc:Ignorable="d"
         Title="Settings" Height="450" Width="800">
     <Grid>
-        <ComboBox Name="GenderList" HorizontalAlignment="Left" Margin="248,258,0,0" VerticalAlignment="Top" Width="120" Visibility="Visible">
-            <ComboBoxItem Name="Male" IsSelected="False">Male</ComboBoxItem>
-            <ComboBoxItem Name="Female" IsSelected="False">Female</ComboBoxItem>
-        </ComboBox>
         <Button Name="UserSettingsButton" Content="User Settings" HorizontalAlignment="Left" Margin="10,195,0,0" VerticalAlignment="Top" Click="UserSettings_Click" Width="115"/>
         <Button Name="UserParametersButton" Content="User Parameters" HorizontalAlignment="Left" Margin="10,230,0,0" VerticalAlignment="Top" Click="UserParameters_Click" Width="115"/>
         <Button Name="LogOutButton" Content="Log out" HorizontalAlignment="Left" Margin="10,385,0,0" VerticalAlignment="Top" Click="LogOut_Click" Width="115"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="10,22,0,0" VerticalAlignment="Top" Width="100"/>
-        <TextBox Name ="PasswordTextBox" HorizontalAlignment="Left" Margin="248,187,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="310" Visibility="Hidden"/>
-        <TextBox Name ="UsernameTextBox" HorizontalAlignment="Left" Margin="248,121,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="310" Visibility="Hidden"/>
-        <TextBox Name ="WakeUpTextBox" HorizontalAlignment="Left" Margin="448,262,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="60" Visibility="Visible"/>
-        <TextBox Name="EmailTextBox" HorizontalAlignment="Left" Margin="248,243,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="329" Visibility="Hidden"/>
-        <Label Name ="UsernameLabel" Content="Username" HorizontalAlignment="Left" Margin="248,90,0,0" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
-        <Label Name ="PasswordLabel" Content="Password" HorizontalAlignment="Left" Margin="248,160,0,0" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
-        <Label Name ="ActivityTimeLabel" Content="ActivityTime" HorizontalAlignment="Left" Margin="448,235,0,0" VerticalAlignment="Top" Width="169" Visibility="Visible"/>
-        <Label Name ="EmailLabel" Content="Email" HorizontalAlignment="Left" Margin="248,217,0,0" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
+        <Image Name="Avatar" HorizontalAlignment="Left" Height="100" Margin="10,22,0,0" VerticalAlignment="Top" Width="100"/>
+        <Grid Name="UserSettingsGrid" HorizontalAlignment="Left" Height="171" Margin="248,90,0,0" VerticalAlignment="Top" Width="329" Visibility="Hidden">
+            <TextBox x:Name ="PasswordTextBox" HorizontalAlignment="Left" Margin="0,97,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="310" Visibility="Visible"/>
+            <TextBox x:Name ="UsernameTextBox" HorizontalAlignment="Left" Margin="0,31,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="310" Visibility="Visible"/>
+            <TextBox x:Name="EmailTextBox" HorizontalAlignment="Center" Margin="0,153,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="329" Visibility="Visible"/>
+            <Label x:Name ="UsernameLabel" Content="Username" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Visibility="Visible"/>
+            <Label x:Name ="PasswordLabel" Content="Password" HorizontalAlignment="Left" Margin="0,70,0,0" VerticalAlignment="Top" Width="120" Visibility="Visible"/>
+            <Label x:Name ="EmailLabel" Content="Email" HorizontalAlignment="Left" Margin="0,127,0,0" VerticalAlignment="Top" Width="120" Visibility="Visible"/>
+
+        </Grid>
 
         <ComboBox x:Name="NotificationsSettings" HorizontalAlignment="Left" Margin="10,271,0,0" VerticalAlignment="Top" Width="120" Visibility="Visible">
-            <TextBox>Enter schedule</TextBox>
+            <ComboBoxItem>Every hour</ComboBoxItem>
+            <ComboBoxItem>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Custom input: " VerticalAlignment="Center"/>
+                    <TextBox Name="CustomPeriodTextBox">///</TextBox>
+                </StackPanel>
+            </ComboBoxItem>
+            <ComboBoxItem>Every day</ComboBoxItem>
+            <ComboBoxItem>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Disabled: " VerticalAlignment="Center"/>
+                    <CheckBox Name="IsDisabled"></CheckBox>
+                </StackPanel>
+            </ComboBoxItem>
         </ComboBox>
         <Button Name="SaveChangesButton" Content="Save Changes" HorizontalAlignment="Left" Margin="657,385,0,0" VerticalAlignment="Top" Width="100" Click="SaveChangesButton_Click"/>
-        <TextBox Name="WeightTextBox" HorizontalAlignment="Left" Margin="248,90,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="329"/>
-        <TextBox Name="HeightTextBox" HorizontalAlignment="Left" Margin="248,152,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="329"/>
-        <TextBox Name="AgeTextBox" HorizontalAlignment="Left" Margin="248,205,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="329"/>
-        <TextBox Name="GoingToBedTextBox" HorizontalAlignment="Left" Margin="548,262,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="69"/>
-        <Label Name="WeightLabel" Content="Weight" HorizontalAlignment="Left" Margin="248,64,0,0" VerticalAlignment="Top" Width="152"/>
-        <Label Name="HeightLabel" Content="Height" HorizontalAlignment="Left" Margin="248,126,0,0" VerticalAlignment="Top" Width="152"/>
-        <Label Name="AgeLabel" Content="Age" HorizontalAlignment="Left" Margin="248,179,0,0" VerticalAlignment="Top" Width="152"/>
-        <Label Name="GenderLabel" Content="Gender" HorizontalAlignment="Left" Margin="248,235,0,0" VerticalAlignment="Top" Width="152"/>
-        <Button Name="Gender" Content="Change Avatar" HorizontalAlignment="Left" Margin="25,146,0,0" VerticalAlignment="Top" Width="63"/>
+        <Grid Name="UserParametersGrid" HorizontalAlignment="Left" Height="216" Margin="248,64,0,0" VerticalAlignment="Top" Width="369" Visibility="Hidden">
+            <ComboBox x:Name="GenderList" HorizontalAlignment="Left" Margin="0,194,0,0" VerticalAlignment="Top" Width="120" Visibility="Visible">
+                <ComboBoxItem x:Name="Male" IsSelected="False" Content="Male"/>
+                <ComboBoxItem x:Name="Female" IsSelected="False" Content="Female"/>
+            </ComboBox>
+            <TextBox x:Name ="WakeUpTextBox" HorizontalAlignment="Left" Margin="200,198,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="60" Visibility="Visible"/>
+            <Label x:Name ="ActivityTimeLabel" Content="ActivityTime" HorizontalAlignment="Left" Margin="200,171,0,0" VerticalAlignment="Top" Width="169" Visibility="Visible"/>
+            <TextBox x:Name="WeightTextBox" HorizontalAlignment="Left" Margin="0,26,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="329"/>
+            <TextBox x:Name="HeightTextBox" HorizontalAlignment="Left" Margin="0,88,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="329"/>
+            <TextBox x:Name="AgeTextBox" HorizontalAlignment="Left" Margin="0,141,0,0" Text="00:00:00" TextWrapping="Wrap" VerticalAlignment="Top" Width="329"/>
+            <TextBox x:Name="GoingToBedTextBox" HorizontalAlignment="Left" Margin="300,198,0,0" Text="00:00:00" TextWrapping="Wrap" VerticalAlignment="Top" Width="69"/>
+            <Label x:Name="WeightLabel" Content="Weight" HorizontalAlignment="Left" VerticalAlignment="Top" Width="152"/>
+            <Label x:Name="HeightLabel" Content="Height" HorizontalAlignment="Left" Margin="0,62,0,0" VerticalAlignment="Top" Width="152"/>
+            <Label x:Name="AgeLabel" Content="Age" HorizontalAlignment="Left" Margin="0,115,0,0" VerticalAlignment="Top" Width="152"/>
+            <Label x:Name="GenderLabel" Content="Gender" HorizontalAlignment="Left" Margin="0,171,0,0" VerticalAlignment="Top" Width="152"/>
+        </Grid>
+        <Button Name="ChangeAvatar" Content="Change Avatar" HorizontalAlignment="Left" Margin="25,146,0,0" VerticalAlignment="Top" Width="91" Click="ChangeAvatar_Click"/>
 
     </Grid>
 </Window>
