--- a/DrinkWater/DrinkWater/ProfileStatistics.xaml
+++ b/DrinkWater/DrinkWater/ProfileStatistics.xaml
@@ -21,7 +21,7 @@
                         </lvc:AxisSection>
                     </lvc:Axis.Sections>
                 </lvc:Axis>
-               
+
             </lvc:CartesianChart.AxisY>
         </lvc:CartesianChart>
         <Label Name="Username" Content="Username:" HorizontalAlignment="Left" Margin="56,217,0,0" VerticalAlignment="Top"/>
@@ -40,24 +40,34 @@
             <ComboBoxItem x:Name="PeriodLable2" HorizontalAlignment="Right"  VerticalAlignment="Top" Width="56" >Per month</ComboBoxItem>
             <ComboBoxItem x:Name="PeriodLable3" HorizontalAlignment="Right"  VerticalAlignment="Top" Width="56" >Per year</ComboBoxItem>
         </ComboBox>
-        <Button x:Name="Settings" Content="Settings" HorizontalAlignment="Left" Margin="724,25,0,0" VerticalAlignment="Top" Height="36" Click="Settings_Click"/>
+        <Button x:Name="Settings" Content="Settings" HorizontalAlignment="Left" Margin="724,25,0,0" VerticalAlignment="Top" Height="36" Click="Settings_Click" RenderTransformOrigin="0,0" UseLayoutRounding="True">
+            <Button.LayoutTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.LayoutTransform>
+        </Button>
         <Image Name="Avatar" HorizontalAlignment="Left" Height="100" Margin="45,85,0,0" VerticalAlignment="Top" Width="100"/>
-        <Grid HorizontalAlignment="Left" Height="52" VerticalAlignment="Top" Width="102" Margin="669,165,0,0">
+        <Grid HorizontalAlignment="Left" Height="52" VerticalAlignment="Top" Width="102" Margin="676,165,0,0">
             <Image  Name="ImageElement1" HorizontalAlignment="Left" Height="45" VerticalAlignment="Top" Width="26"/>
             <Label Name="UpperElement1" Content="Label" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Top" Width="62"/>
             <Label Name="LowerElement1" Content="Label" HorizontalAlignment="Left" Margin="40,26,0,0" VerticalAlignment="Top" Width="62"/>
         </Grid>
-        <Grid HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" Width="102" Margin="669,237,0,0">
+        <Grid HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" Width="102" Margin="676,237,0,0">
             <Image Name="ImageElement2" HorizontalAlignment="Left" Height="45" VerticalAlignment="Top" Width="26"/>
             <Label Name="UpperElement2" Content="Label" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Top" Width="62"/>
             <Label Name="LowerElement2" Content="Label" HorizontalAlignment="Left" Margin="40,20,0,0" VerticalAlignment="Top" Width="62"/>
         </Grid>
-        <Button Name="BackwardButton" Content="Previous" HorizontalAlignment="Left" Margin="690,138,0,0" VerticalAlignment="Top" Click="BackwardButton_Click"/>
-        <Button Name="ForwardButton" Content="Next" HorizontalAlignment="Left" Margin="690,292,0,0" VerticalAlignment="Top" Click="ForwardButton_Click" Width="49"/>
-        <Label Name="Score1" Content="Balance achieved  " HorizontalAlignment="Left" Margin="309,381,0,0" VerticalAlignment="Top" Width="114"/>
-        <Label x:Name="Score2" Content="" HorizontalAlignment="Left" Margin="418,381,0,0" VerticalAlignment="Top" Width="32"/>
-        <Label x:Name="Score3" Content="out of" HorizontalAlignment="Left" Margin="455,381,0,0" VerticalAlignment="Top" Width="47"/>
-        <Label x:Name="Score4" Content="" HorizontalAlignment="Left" Margin="507,381,0,0" VerticalAlignment="Top" Width="32"/>
-        <Rectangle HorizontalAlignment="Left" Height="26" Margin="283,381,0,0" Stroke="Black" VerticalAlignment="Top" Width="305"/>
+        <Button Name="BackwardButton" Content="Up" HorizontalAlignment="Left" Margin="697,140,0,0" VerticalAlignment="Top" Click="BackwardButton_Click" RenderTransformOrigin="2.477,0.784" Width="39"/>
+        <Button Name="ForwardButton" Content="Down" HorizontalAlignment="Left" Margin="697,292,0,0" VerticalAlignment="Top" Click="ForwardButton_Click" Width="39"/>
+        <Label Name="Score1" Content="Balance achieved  " HorizontalAlignment="Left" Margin="327,379,0,0" VerticalAlignment="Top" Width="114"/>
+        <Label x:Name="Score2" Content="" HorizontalAlignment="Left" Margin="436,379,0,0" VerticalAlignment="Top" Width="32"/>
+        <Label x:Name="Score3" Content="out of" HorizontalAlignment="Left" Margin="473,379,0,0" VerticalAlignment="Top" Width="47"/>
+        <Label x:Name="Score4" Content="" HorizontalAlignment="Left" Margin="525,379,0,0" VerticalAlignment="Top" Width="32"/>
+        <Rectangle HorizontalAlignment="Left" Height="26" Margin="301,379,0,0" Stroke="Black" VerticalAlignment="Top" Width="305"/>
+        <Button Name="Main" Content="Main" HorizontalAlignment="Left" Height="36" Margin="45,25,0,0" VerticalAlignment="Top" Width="50" Click="Main_Click"/>
     </Grid>
 </Window>
