--- a/DrinkWater/DrinkWater/LogReg/Registration.xaml
+++ b/DrinkWater/DrinkWater/LogReg/Registration.xaml
@@ -5,25 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DrinkWater.LogReg"
         mc:Ignorable="d"
-        Title="Registration" Height="500" Width="800">
+        Title="" Height="500" Width="800">
     <Grid RenderTransformOrigin="1.005,0.504">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="71*"/>
+            <ColumnDefinition Width="7*"/>
+            <ColumnDefinition Width="722*"/>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="textBoxUsername" HorizontalAlignment="Left" Margin="317,74,0,0" Text="Misha" TextWrapping="Wrap" VerticalAlignment="Top" Width="126" Height="20" RenderTransformOrigin="0.538,0.513"/>
-        <TextBox x:Name="textBoxEmail" HorizontalAlignment="Left" Margin="317,139,0,0" Text="misha@gmail.com" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="20"/>
-        <TextBox x:Name="textBoxPassword" HorizontalAlignment="Left" Margin="317,208,0,0" Text="mishapassword" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18"/>
-        <TextBox  x:Name="textBoxConfirmPassword" HorizontalAlignment="Left" Margin="317,280,0,0" Text="mishapassword" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18"/>
-        <Button x:Name="buttonSignUp" Content="Sign up" HorizontalAlignment="Left" Margin="317,345,0,0" VerticalAlignment="Top" Height="22" Width="120" Click="Button_Click" RenderTransformOrigin="0.494,0.667"/>
-        <Label Content="Username:" HorizontalAlignment="Left" Margin="312,48,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="67"/>
-        <Label Content="Email:" HorizontalAlignment="Left" Margin="312,113,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="67"/>
-        <Label Content="Password:" HorizontalAlignment="Left" Margin="312,182,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="67"/>
-        <Label Content="Confirm password:" HorizontalAlignment="Left" Margin="312,254,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="117"/>
-        <Label x:Name="labelUsername" Content="" HorizontalAlignment="Left" Margin="312,94,0,0" VerticalAlignment="Top" Background="White" Visibility="Hidden" />
-        <Label x:Name="labelEmail" Content="" HorizontalAlignment="Left" Margin="312,159,0,0" VerticalAlignment="Top" Visibility="Hidden"  />
-        <Label x:Name="labelPassword" Content="Label" HorizontalAlignment="Left" Margin="312,226,0,0" VerticalAlignment="Top"  Visibility="Hidden"/>
+        <TextBox x:Name="textBoxUsername" HorizontalAlignment="Left" Margin="257,108,0,0" Text="Misha" TextWrapping="Wrap" VerticalAlignment="Top" Width="126" Height="20" RenderTransformOrigin="0.538,0.513" Grid.Column="2"/>
+        <TextBox x:Name="textBoxEmail" HorizontalAlignment="Left" Margin="257,173,0,0" Text="misha@gmail.com" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="20" Grid.Column="2"/>
+        <TextBox x:Name="textBoxPassword" HorizontalAlignment="Left" Margin="257,242,0,0" Text="mishapassword" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18" Grid.Column="2"/>
+        <TextBox  x:Name="textBoxConfirmPassword" HorizontalAlignment="Left" Margin="257,309,0,0" Text="mishapassword" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="18" Grid.Column="2"/>
+        <Button x:Name="buttonSignUp" Content="Sign up" HorizontalAlignment="Left" Margin="257,379,0,0" VerticalAlignment="Top" Height="22" Width="120" Click="Button_Click" RenderTransformOrigin="0.494,0.667" Grid.Column="2"/>
+        <Label Content="Username:" HorizontalAlignment="Left" Margin="252,82,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="67" Grid.Column="2" Height="26"/>
+        <Label Content="Email:" HorizontalAlignment="Left" Margin="252,147,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="67" Grid.Column="2" Height="26"/>
+        <Label Content="Password:" HorizontalAlignment="Left" Margin="252,216,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="67" Grid.Column="2" Height="26"/>
+        <Label Content="Confirm password:" HorizontalAlignment="Left" Margin="252,283,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.67" Width="117" Grid.Column="2" Height="26"/>
+        <Label x:Name="labelUsername" Visibility="Hidden" Content="" HorizontalAlignment="Left"  Margin="252,128,0,0" VerticalAlignment="Top" Background="White"  Grid.Column="2" Height="26" Width="334" />
+        <Label x:Name="labelEmail" Visibility="Hidden" Content="" HorizontalAlignment="Left" Margin="252,193,0,0" VerticalAlignment="Top"  Grid.Column="2" Height="26" Width="305"   />
+        <Label x:Name="labelPassword" Visibility="Hidden" Content="Label" HorizontalAlignment="Left"  Margin="252,260,0,0" VerticalAlignment="Top"   Grid.Column="2" Height="26" Width="377"/>
+        <Label x:Name="labelPasswordConfirm" Content="Label" Grid.Column="2" HorizontalAlignment="Left" Margin="252,327,0,0"   Visibility="Hidden" VerticalAlignment="Top" Width="212"/>
+        <Label Content=" Sign up" Grid.Column="2" HorizontalAlignment="Left" Margin="275,40,0,0" VerticalAlignment="Top" Width="108" AutomationProperties.HelpText="" FontSize="14" FontFamily="Arial Black" FontStyle="Italic" FontWeight="Bold" Opacity="0.985"/>
 
     </Grid>
 </Window>
