--- a/DrinkWater/DrinkWater/ProfileStatistics.xaml
+++ b/DrinkWater/DrinkWater/ProfileStatistics.xaml
@@ -61,8 +61,8 @@
             <Label Name="UpperElement2" Content="Label" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Top" Width="62"/>
             <Label Name="LowerElement2" Content="Label" HorizontalAlignment="Left" Margin="40,20,0,0" VerticalAlignment="Top" Width="62"/>
         </Grid>
-        <Button Name="BackwardButton" Content="Up" HorizontalAlignment="Left" Margin="697,140,0,0" VerticalAlignment="Top" Click="BackwardButton_Click" RenderTransformOrigin="2.477,0.784" Width="39"/>
-        <Button Name="ForwardButton" Content="Down" HorizontalAlignment="Left" Margin="697,292,0,0" VerticalAlignment="Top" Click="ForwardButton_Click" Width="39"/>
+        <Button Name="BackwardButton" Content="Up" HorizontalAlignment="Left" Margin="697,140,0,0" VerticalAlignment="Top" Click="BackwardButton_Click" RenderTransformOrigin="2.477,0.784"/>
+        <Button Name="ForwardButton" Content="Down" HorizontalAlignment="Left" Margin="697,292,0,0" VerticalAlignment="Top" Click="ForwardButton_Click" Width="49"/>
         <Label Name="Score1" Content="Balance achieved  " HorizontalAlignment="Left" Margin="327,379,0,0" VerticalAlignment="Top" Width="114"/>
         <Label x:Name="Score2" Content="" HorizontalAlignment="Left" Margin="436,379,0,0" VerticalAlignment="Top" Width="32"/>
         <Label x:Name="Score3" Content="out of" HorizontalAlignment="Left" Margin="473,379,0,0" VerticalAlignment="Top" Width="47"/>
